# LinuxPods

./: .gitignore  DOCS.md  README.md  build.sh  linuxpods.rpmlintrc  linuxpods.spec
data/: 90-linuxpods.preset  linuxpods-daemon.service  me.kavishdevar.linuxpods.service
data/man/: librepods-ctl.1  librepods.1  linuxpods-daemon.1
design/: stitch_compact.html  stitch_hearing.html  stitch_redesign.html  stitch_settings.html
plasmoid/: metadata.json
plasmoid/contents/ui/: BatteryItem.qml  CompactRepresentation.qml  DbusBackend.qml  FeatureRow.qml  FullRepresentation.qml  main.qml
src/: BasicControlCommand.hpp  BatteryIndicator.qml  BluetoothMonitor.cpp  BluetoothMonitor.h  CMakeLists.txt  HearingAidPage.qml  Icon.qml  KeysQRDialog.qml  Main.qml  PodColumn.qml  QRCodeImageProvider.hpp  SegmentedControl.qml  SettingRow.qml  SettingsPage.qml  airpods_packets.h  autostartmanager.hpp  battery.hpp  deviceinfo.hpp  eardetection.hpp  enums.h  librepods-ctl.cpp  logger.h  main.cpp  systemsleepmonitor.hpp  trayiconmanager.cpp  trayiconmanager.h
src/assets/: me.kavishdevar.librepods.desktop  me.kavishdevar.linuxpods.metainfo.xml
src/ble/: blemanager.cpp  blemanager.h  bleutils.cpp  bleutils.h
src/daemon/: main.cpp
src/dbus/: linuxpodsdbusadaptor.h  me.kavishdevar.linuxpods.Manager.xml
src/media/: mediacontroller.cpp  mediacontroller.h  playerstatuswatcher.cpp  playerstatuswatcher.h  pulseaudiocontroller.cpp  pulseaudiocontroller.h
src/service/: linuxpodsservice.cpp  linuxpodsservice.h
src/translations/: librepods_tr.ts
